# agent-shield-arena

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Justfile  README.md  justfile  pyproject.toml
attack_agent/: __init__.py
attack_agent/src/: __init__.py  agent.py  memory.py  reflector.py  strategies.py
common/src/: __init__.py  config.py  event_emitter.py  exceptions.py  llm_client.py  logging.py  models.py
dashboard/src/: __main__.py  app.py  event_watcher.py  mock_event_producer.py
dashboard/static/: app.js  index.html  styles.css
defender_agent/: __init__.py
defender_agent/src/: __init__.py  defended_system.py  defender.py  memory.py  reflector.py
docs/: 01-project-brief.md  02-design.md  03-dashboard-ui-design.md  04-data-artifacts.md  04-event-storage.md  11-unfinished-mvp.md  12-future-work.md
docs/assets/: arena-diagram.html  runtime-diagram.html
docs/tmp/: 10-build-plan.md
evaluator/: __init__.py
evaluator/src/: __init__.py  evaluator.py  rules.py
runner/src/: __init__.py  __main__.py  adapter.py  arena_artifacts.py  attack_source.py  mock_system.py  models.py  runner.py  scenario.py  simple_evaluator.py  trace_builder.py
shielded_system/src/: __init__.py  business_rules.txt  models.py  prompts.py  system.py  tools.py
tests/attack_agent/: test_agent.py  test_attack_output_parsing.py  test_memory.py  test_reflector.py  test_strategies.py
tests/common/: test_event_emitter.py  test_models.py
tests/dashboard/: test_app.py  test_event_watcher.py  test_mock_event_producer.py  (+1 more)
triage_agent/: __init__.py
(+18 files in other folders)
