[project]
name = "agent-shield-arena"
version = "0.1.0"
description = "Adaptive guardrails system for customer-facing AI agents"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "litellm",
    "python-dotenv",
]

[project.optional-dependencies]
dashboard = [
    "fastapi",
    "uvicorn[standard]",
    "websockets",
]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
